--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body{
 }
 
 .container button{
-    background-color: #512da8;
+    background-color: #47ad28;
     color: #fff;
     font-size: 12px;
     padding: 10px 45px;
@@ -161,10 +161,10 @@ body{
 }
 
 .toggle{
-    background-color: #512da8;
+    background-color: #000000;
     height: 100%;
-    background: linear-gradient(to right, #5c6bc0, #512da8);
-    color: #fff;
+    background: linear-gradient(to right, #4fbb4f, #118d0d);
+    color: #000000;
     position: relative;
     left: -100%;
     height: 100%;
